--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -24,7 +24,7 @@
 
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-primary">
-		<a class="navbar-brand" href="#">SmartContactManager</a>
+		<a class="navbar-brand" th:href="@{/}">SmartContactManager</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false"
