--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -60,6 +60,20 @@
 							
 							</div>
 							
+							<div class="form-group form-check ">
+							
+							<input type="checkbox" 
+							class="form-check-input"
+							name="agreement"
+							id="agreement" 
+					
+							/>
+							<label for="agreement"> Terms and Condition</label>
+							
+							
+							
+							</div>
+							
 							
 							<div class="container text-center "  >
 							
